Added validation to all routes for profiles and creations
